; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/tomoyo/extr_realpath.c_tomoyo_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/tomoyo/extr_realpath.c_tomoyo_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tomoyo_dynamic_memory_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tomoyo_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @ksize(i8* %6)
  %8 = call i32 @atomic_sub(i32 %7, i32* @tomoyo_dynamic_memory_size)
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @kfree(i8* %9)
  br label %11

11:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @atomic_sub(i32, i32*) #1

declare dso_local i32 @ksize(i8*) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
